--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -1441,11 +1441,7 @@ Cf type is a simple object to hold current currency data
 <dd>
 <p>timeseries returns a Ts type date and one data column based on ty selection input usually is a Df object and a string , if a string is in ohlcva the relevant series will be extracted from the Df object</p>
 <p>usage exmple :</p>
-<p>```nimrod</p>
-<blockquote><p>timeseries(myDfObject,&quot;o&quot;)</p></blockquote>
-<dl class="docutils"><dt>```</dt>
-<dd>this would return dates in dd and open prices in ts</dd>
-</dl>
+<pre><span class="Identifier">timeseries</span><span class="Punctuation">(</span><span class="Identifier">myDfObject</span><span class="Punctuation">,</span><span class="StringLit">&quot;o&quot;</span><span class="Punctuation">)</span></pre><p>this would return dates in dd and open prices in ts </p>
 
 
 </dd>
@@ -1808,7 +1804,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-06-21 13:05:29 UTC</small>
+        <small>Made with Nim. Generated: 2015-06-21 13:08:34 UTC</small>
       </div>
     </div>
   </div>
