--- a/libFinHk.html
+++ b/libFinHk.html
@@ -489,7 +489,7 @@ pre {
   box-sizing: border-box;
   min-width: calc(100% - 19.5px);
   padding: 9.5px;
-  margin: 0 10px 0px 10px;
+  margin: 0.25em 10px 0.25em 10px;
   font-size: 14px;
   line-height: 20px;
   white-space: pre !important;
@@ -892,6 +892,10 @@ div.align-right {
 
 /* div.align-center * { */
 /*   text-align: left } */
+
+ul.simple > li {
+  margin-bottom: 0.5em }
+
 ol.simple, ul.simple {
   margin-bottom: 1em; }
 
@@ -1178,12 +1182,12 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="initHKEX*(): seq[seq[string]]"><wbr />init<wbr />HKEX</a></li>
   <li><a class="reference" href="#getHKEXseq,seq[string],string"
     title="getHKEXseq*(stockslist: seq[string]; acode: string): int"><wbr />get<wbr />HKEXseq</a></li>
-  <li><a class="reference" href="#hkPfseq,Nf,"
-    title="hkPfseq*(anf: Nf; hkexcodes): seq[int]"><wbr />hk<wbr />Pfseq</a></li>
+  <li><a class="reference" href="#hkPfseq,Nf,seq[seq[string]]"
+    title="hkPfseq*(anf: Nf; hkexcodes: seq[seq[string]]): seq[int]"><wbr />hk<wbr />Pfseq</a></li>
   <li><a class="reference" href="#showQuoteTableHk,Nf"
     title="showQuoteTableHk*(apfData: Nf)"><wbr />show<wbr />Quote<wbr />Table<wbr />Hk</a></li>
   <li><a class="reference" href="#hkRandomPortfolio,int,string,string"
-    title="hkRandomPortfolio*(sz: int = 10; startdate: string = &quot;2014-01-01&quot;; 
+    title="hkRandomPortfolio*(sz: int = 10; startdate: string = &quot;2014-01-01&quot;;
                    enddate: string = getDateStr()): (Nf, seq[int])"><wbr />hk<wbr />Random<wbr />Portfolio</a></li>
 
   </ul>
@@ -1291,7 +1295,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 
 
 </dd>
-<dt id="hkPfseq"><a name="hkPfseq,Nf,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">hkPfseq</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">anf</span><span class="Other">:</span> <span class="Identifier">Nf</span><span class="Other">;</span> <span class="Identifier">hkexcodes</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span></pre></dt>
+<dt id="hkPfseq"><a name="hkPfseq,Nf,seq[seq[string]]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">hkPfseq</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">anf</span><span class="Other">:</span> <span class="Identifier">Nf</span><span class="Other">;</span> <span class="Identifier">hkexcodes</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span></pre></dt>
 <dd>
 <p>hkPfseq</p>
 <p>hkPfseq returns the index seq of stocks in a Nf objects dx Stocks </p>
@@ -1306,8 +1310,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 
 
 </dd>
-<dt id="hkRandomPortfolio"><a name="hkRandomPortfolio,int,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">hkRandomPortfolio</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">sz</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">10</span><span class="Other">;</span> <span class="Identifier">startdate</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;2014-01-01&quot;</span><span class="Other">;</span> 
-                        <span class="Identifier">enddate</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">getDateStr</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Other">(</span><span class="Identifier">Nf</span><span class="Other">,</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
+<dt id="hkRandomPortfolio"><a name="hkRandomPortfolio,int,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">hkRandomPortfolio</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">sz</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">10</span><span class="Other">;</span> <span class="Identifier">startdate</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;2014-01-01&quot;</span><span class="Other">;</span>
+                       <span class="Identifier">enddate</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">getDateStr</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">:</span> <span class="Other">(</span><span class="Identifier">Nf</span><span class="Other">,</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>hkRandomPf</p>
 <p>a fast automated random Portfolio generator</p>
@@ -1327,7 +1331,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-12 14:13:39 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-13 17:37:46 UTC</small>
       </div>
     </div>
   </div>
