--- a/nimFinLib.html
+++ b/nimFinLib.html
@@ -489,7 +489,7 @@ pre {
   box-sizing: border-box;
   min-width: calc(100% - 19.5px);
   padding: 9.5px;
-  margin: 0 10px 0px 10px;
+  margin: 0.25em 10px 0.25em 10px;
   font-size: 14px;
   line-height: 20px;
   white-space: pre !important;
@@ -892,6 +892,10 @@ div.align-right {
 
 /* div.align-center * { */
 /*   text-align: left } */
+
+ul.simple > li {
+  margin-bottom: 0.5em }
+
 ol.simple, ul.simple {
   margin-bottom: 1em; }
 
@@ -1159,34 +1163,34 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <a class="reference reference-toplevel" href="#7" id="57">Types</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#Pf"
-    title="Pf* = object 
-  pf*: seq[Nf]                ## pf holds all Nf type portfolios for an account"><wbr />Pf</a></li>
+    title="Pf* = object
+  pf*: seq[Nf]                 ## pf holds all Nf type portfolios for an account"><wbr />Pf</a></li>
   <li><a class="reference" href="#Nf"
-    title="Nf* = object 
-  nx*: string                 ## nx  holds portfolio name  e.g. MyGetRichPortfolio
-  dx*: seq[Df]                ## dx  holds all stocks with historical data"><wbr />Nf</a></li>
+    title="Nf* = object
+  nx*: string                  ## nx  holds portfolio name  e.g. MyGetRichPortfolio
+  dx*: seq[Df]                 ## dx  holds all stocks with historical data"><wbr />Nf</a></li>
   <li><a class="reference" href="#Df"
     title="Df* = object of Nf
-  stock*: string              ## yahoo style stock code
+  stock*: string               ## yahoo style stock code
   date*: seq[string]
   open*: seq[float]
   high*: seq[float]
   low*: seq[float]
   close*: seq[float]
-  vol*: seq[float]            ## volume
-  adjc*: seq[float]           ## adjusted close price
-  ro*: seq[Runningstat]       ## RunningStat for open price
-  rh*: seq[Runningstat]       ## RunningStat for high price
-  rl*: seq[Runningstat]       ## RunningStat for low price
-  rc*: seq[Runningstat]       ## RunningStat for close price
-  rv*: seq[Runningstat]       ## RunningStat for volume price
-  rca*: seq[Runningstat]      ## RunningStat for adjusted close price"><wbr />Df</a></li>
+  vol*: seq[float]             ## volume
+  adjc*: seq[float]            ## adjusted close price
+  ro*: seq[Runningstat]        ## RunningStat for open price
+  rh*: seq[Runningstat]        ## RunningStat for high price
+  rl*: seq[Runningstat]        ## RunningStat for low price
+  rc*: seq[Runningstat]        ## RunningStat for close price
+  rv*: seq[Runningstat]        ## RunningStat for volume price
+  rca*: seq[Runningstat]       ## RunningStat for adjusted close price"><wbr />Df</a></li>
   <li><a class="reference" href="#Ts"
-    title="Ts* = object 
+    title="Ts* = object
   dd*: seq[string]
   tx*: seq[float]"><wbr />Ts</a></li>
   <li><a class="reference" href="#Cf"
-    title="Cf* = object 
+    title="Cf* = object
   cu*: seq[string]
   ra*: seq[float]"><wbr />Cf</a></li>
 
@@ -1249,6 +1253,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="showCurrentStocks*(stcks: string)"><wbr />show<wbr />Current<wbr />Stocks</a></li>
   <li><a class="reference" href="#day,string"
     title="day*(aDate: string): string"><wbr />day</a></li>
+  <li><a class="reference" href="#ymonth,string"
+    title="ymonth*(aDate: string): string"><wbr />ymonth</a></li>
   <li><a class="reference" href="#month,string"
     title="month*(aDate: string): string"><wbr />month</a></li>
   <li><a class="reference" href="#year,string"
@@ -1414,42 +1420,42 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <div class="section" id="7">
 <h1><a class="toc-backref" href="#7">Types</a></h1>
 <dl class="item">
-<dt id="Pf"><a name="Pf"></a><pre><span class="Identifier">Pf</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Keyword">object</span> 
-  <span class="Identifier">pf</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Nf</span><span class="Other">]</span>                <span class="Comment">## pf holds all Nf type portfolios for an account</span>
+<dt id="Pf"><a name="Pf"></a><pre><span class="Identifier">Pf</span><span class="Operator">*</span> <span class="Other">=</span> <span class="Keyword">object</span>
+  <span class="Identifier">pf</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Nf</span><span class="Other">]</span>                 <span class="Comment">## pf holds all Nf type portfolios for an account</span>
   </pre></dt>
 <dd>
 Pf type holds all portfolios similar to a master account portfolios are Nf objects
 
 </dd>
-<dt id="Nf"><a name="Nf"></a><pre><span class="Identifier">Nf</span><span class="Operator">*</span> <span class="Other">{.</span><span class="Identifier">inheritable</span><span class="Other">.}</span> <span class="Other">=</span> <span class="Keyword">object</span> 
-  <span class="Identifier">nx</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>                 <span class="Comment">## nx  holds portfolio name  e.g. MyGetRichPortfolio</span>
-  <span class="Identifier">dx</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Df</span><span class="Other">]</span>                <span class="Comment">## dx  holds all stocks with historical data</span>
+<dt id="Nf"><a name="Nf"></a><pre><span class="Identifier">Nf</span><span class="Operator">*</span> <span class="Other">{.</span><span class="Identifier">inheritable</span><span class="Other">.}</span> <span class="Other">=</span> <span class="Keyword">object</span>
+  <span class="Identifier">nx</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>                  <span class="Comment">## nx  holds portfolio name  e.g. MyGetRichPortfolio</span>
+  <span class="Identifier">dx</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Df</span><span class="Other">]</span>                 <span class="Comment">## dx  holds all stocks with historical data</span>
   </pre></dt>
 <dd>
 Nf type holds one portfolio with all relevant historic stocks data
 
 </dd>
 <dt id="Df"><a name="Df"></a><pre><span class="Identifier">Df</span><span class="Operator">*</span> <span class="Other">{.</span><span class="Identifier">inheritable</span><span class="Other">.}</span> <span class="Other">=</span> <span class="Keyword">object</span> <span class="Keyword">of</span> <span class="Identifier">Nf</span>
-  <span class="Identifier">stock</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>              <span class="Comment">## yahoo style stock code</span>
+  <span class="Identifier">stock</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">string</span>               <span class="Comment">## yahoo style stock code</span>
   <span class="Identifier">date</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span>
   <span class="Identifier">open</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span>
   <span class="Identifier">high</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span>
   <span class="Identifier">low</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span>
   <span class="Identifier">close</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span>
-  <span class="Identifier">vol</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span>            <span class="Comment">## volume</span>
-  <span class="Identifier">adjc</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span>           <span class="Comment">## adjusted close price</span>
-  <span class="Identifier">ro</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>       <span class="Comment">## RunningStat for open price</span>
-  <span class="Identifier">rh</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>       <span class="Comment">## RunningStat for high price</span>
-  <span class="Identifier">rl</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>       <span class="Comment">## RunningStat for low price</span>
-  <span class="Identifier">rc</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>       <span class="Comment">## RunningStat for close price</span>
-  <span class="Identifier">rv</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>       <span class="Comment">## RunningStat for volume price</span>
-  <span class="Identifier">rca</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>      <span class="Comment">## RunningStat for adjusted close price</span>
+  <span class="Identifier">vol</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span>             <span class="Comment">## volume</span>
+  <span class="Identifier">adjc</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span>            <span class="Comment">## adjusted close price</span>
+  <span class="Identifier">ro</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>        <span class="Comment">## RunningStat for open price</span>
+  <span class="Identifier">rh</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>        <span class="Comment">## RunningStat for high price</span>
+  <span class="Identifier">rl</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>        <span class="Comment">## RunningStat for low price</span>
+  <span class="Identifier">rc</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>        <span class="Comment">## RunningStat for close price</span>
+  <span class="Identifier">rv</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>        <span class="Comment">## RunningStat for volume price</span>
+  <span class="Identifier">rca</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">Runningstat</span><span class="Other">]</span>       <span class="Comment">## RunningStat for adjusted close price</span>
   </pre></dt>
 <dd>
 Df type holds individual stocks history data and RunningStat for ohlcva columns even more items may be added like full company name etc in the future items are stock code, ohlcva, rc and rca .
 
 </dd>
-<dt id="Ts"><a name="Ts"></a><pre><span class="Identifier">Ts</span><span class="Operator">*</span> <span class="Other">{.</span><span class="Identifier">inheritable</span><span class="Other">.}</span> <span class="Other">=</span> <span class="Keyword">object</span> 
+<dt id="Ts"><a name="Ts"></a><pre><span class="Identifier">Ts</span><span class="Operator">*</span> <span class="Other">{.</span><span class="Identifier">inheritable</span><span class="Other">.}</span> <span class="Other">=</span> <span class="Keyword">object</span>
   <span class="Identifier">dd</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span>
   <span class="Identifier">tx</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span>
 </pre></dt>
@@ -1457,7 +1463,7 @@ Df type holds individual stocks history data and RunningStat for ohlcva columns 
 Ts type is a simple timeseries object which can hold one column of any OHLCVA data
 
 </dd>
-<dt id="Cf"><a name="Cf"></a><pre><span class="Identifier">Cf</span><span class="Operator">*</span> <span class="Other">{.</span><span class="Identifier">inheritable</span><span class="Other">.}</span> <span class="Other">=</span> <span class="Keyword">object</span> 
+<dt id="Cf"><a name="Cf"></a><pre><span class="Identifier">Cf</span><span class="Operator">*</span> <span class="Other">{.</span><span class="Identifier">inheritable</span><span class="Other">.}</span> <span class="Other">=</span> <span class="Keyword">object</span>
   <span class="Identifier">cu</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span>
   <span class="Identifier">ra</span><span class="Operator">*</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">float</span><span class="Other">]</span>
 </pre></dt>
@@ -1632,6 +1638,15 @@ showTimeseries takes a Ts object as input as well as a header string for the dat
 <p>day</p>
 <p>get day substring from a yyyy-MM-dd date string</p>
 <p>Format dd </p>
+
+
+</dd>
+<dt id="ymonth"><a name="ymonth,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">ymonth</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">aDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
+<dd>
+<p>ymonth</p>
+<p>yahoo month starts with 00 for jan</p>
+<p>Format MM</p>
+<p>not exported and only used internally for yahoo url setup</p>
 
 
 </dd>
@@ -2085,7 +2100,7 @@ msggb<pre><span class="Identifier">msggb</span><span class="Punctuation">(</span
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-07-12 14:13:39 UTC</small>
+        <small>Made with Nim. Generated: 2015-07-13 17:37:46 UTC</small>
       </div>
     </div>
   </div>
