--- a/cx.html
+++ b/cx.html
@@ -1341,10 +1341,10 @@ function main() {
     title="printy[T](astring: varargs[T, `$`])"><wbr />printy<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#rainbow,T,int,bool,bool"
     title="rainbow[T](s: T; xpos: int = 1; fitLine: bool = false; centered: bool = false)"><wbr />rainbow<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#hline,int,string,int"
-    title="hline(n: int = tw; col: string = white; xpos: int = 1)"><wbr />hline<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#hlineLn,int,string,int"
-    title="hlineLn(n: int = tw; col: string = white; xpos: int = 1)"><wbr />hline<wbr />Ln<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#hline,int,string,int,string"
+    title="hline(n: int = tw; col: string = white; xpos: int = 1; lt: string = &quot;-&quot;)"><wbr />hline<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#hlineLn,int,string,int,string"
+    title="hlineLn(n: int = tw; col: string = white; xpos: int = 1; lt: string = &quot;-&quot;)"><wbr />hline<wbr />Ln<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#dline,int,string,string"
     title="dline(n: int = tw; lt: string = &quot;-&quot;; col: string = termwhite)"><wbr />dline<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#dlineLn,int,string,string"
@@ -1838,7 +1838,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2017-10-06
+Latest      : 2017-10-08
 
 Compiler    : Nim &gt;= 0.17.x dev branch
 
@@ -1936,7 +1936,7 @@ In progress : moving some of the non core procs to module cxutils.nim to avoid b
               moving constants to cxconsts.nim
 
 
-Funding     : If you are happy or unhappy send any amount of bitcoins to this wallet :
+Funding     : If you are happy or unhappy feel free to send any amount of bitcoins to this wallet :
               
               194KWgEcRXHGW5YzH1nGqN75WbfzTs92Xk</pre>
 </p>
@@ -2444,16 +2444,22 @@ Colornames supported for background color:
 forward declaration
 
 </dd>
-<dt id="hline"><a name="hline,int,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">hline</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">tw</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">white</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
+<dt id="hline"><a name="hline,int,string,int,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">hline</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">tw</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">white</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">;</span> <span class="Identifier">lt</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;-&quot;</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
-forward declaration
+<p>hline</p>
+<p>draw a full line in stated length and color no linefeed will be issued</p>
+<p>defaults full terminal width and white</p>
+<pre class="listing"><span class="Identifier">hline</span><span class="Punctuation">(</span><span class="DecNumber">30</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">,</span><span class="Identifier">xpos</span><span class="Operator">=</span><span class="Identifier">xpos</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<dt id="hlineLn"><a name="hlineLn,int,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">hlineLn</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">tw</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">white</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
+<dt id="hlineLn"><a name="hlineLn,int,string,int,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">hlineLn</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">tw</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">white</span><span class="Other">;</span> <span class="Identifier">xpos</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">;</span> <span class="Identifier">lt</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;-&quot;</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
-forward declaration
+<p>hlineLn</p>
+<p>draw a full line in stated length and color a linefeed will be issued</p>
+<p>defaults full terminal width and white</p>
+<pre class="listing"><span class="Identifier">hlineLn</span><span class="Punctuation">(</span><span class="DecNumber">30</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="dline"><a name="dline,int,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">dline</span><span class="Other">(</span><span class="Identifier">n</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">tw</span><span class="Other">;</span> <span class="Identifier">lt</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;-&quot;</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma">
@@ -4392,7 +4398,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-10-06 22:44:44 UTC</small>
+        <small>Made with Nim. Generated: 2017-10-08 07:25:40 UTC</small>
       </div>
     </div>
   </div>
